[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "radio_stats"
authors = [
    {name = "Christian Arauner", email = "christian.arauner@tu-dortmund.de"},
]
description = "Package to analyze images of radio galaxies"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/radionets-project/radio_stats"

[options]
install_requires = [
    "numpy",
    "matplotlib",
    "scikit-learn",
    "tqdm",
]

[tool.setuptools_scm]
write_to = "radiotools/_version.py"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
extend-select = [
    "I", # isort
]
ignore = []

fixable = ["ALL"]
unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
